# tahminx

./: .dockerignore  Dockerfile  README.md  UPDATED_FRONTEND_ADMIN_ANALYTICS_FULL.txt  UPDATED_FRONTEND_FILES_FULL.txt  UPDATED_FRONTEND_STRATEGY_LAB_FULL.txt  next.config.ts  package-lock.json  package.json  pyproject.toml  vitest.config.ts  vitest.setup.ts
.github/workflows/: backend-ci.yml
app/: globals.css  layout.tsx  page.tsx
app/account/: page.tsx
app/admin/: layout.tsx  page.tsx
app/basketball/: page.tsx
app/dashboard/: page.tsx
app/football/: page.tsx
app/guide/: page.tsx
app/leagues/: page.tsx
app/live/: page.tsx
app/matches/: page.tsx
app/membership/: page.tsx
app/models/: page.tsx
app/performance/: page.tsx
app/predictions/: page.tsx
app/teams/: page.tsx
backend/: .eslintrc.cjs  .gitignore  .prettierrc  BACKEND_STAGE2_FULL_CODE.md  BACKEND_STAGE3_FULL_CODE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  jest.config.cjs  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: health-check.mjs  prisma-seed-safe.mjs  runtime-start.mjs
backend/src/: app.module.ts  main.ts  scheduler.ts  worker.ts
backend/test/: admin-low-confidence.e2e-spec.ts  admin-model-analysis.e2e-spec.ts  admin-ops.e2e-spec.ts  admin-strategy-feature-lab.e2e-spec.ts  app.e2e-spec.ts  backtest.e2e-spec.ts  (+3 more)
lib/: team-comparison.spec.ts  team-comparison.ts
tests/: test_idempotency.py  test_prediction_service.py
types/: api-contract.ts  domain.ts
(+384 files in other folders)
